--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <section id="a-propos" class="hero">
             <div class="hero-content">
                 <img src="assets/photo.jpg" alt="Photo de profil" class="profile-picture">
-                <h1 data-key="heroName">Prénom Nom</h1>
-                <p data-key="heroSubtitle">Étudiante en développement web et passionnée par les nouvelles technologies.</p>
+                <h1 data-key="heroName">Candice VIALETTE</h1>
+                <p data-key="heroSubtitle">Je suis actuellement étudiante en deuxième année de BTS SIO en SISR (systèmes et réseaux) au lycée Algoud Laffemas. Je suis dynamique et motivée, j'aime apprendre et me dépasser. J</p>
             </div>
         </section>
 
@@ -53,7 +53,7 @@
                     <p>> Lycée Vincent d'Indy</p>
                 </div>
                 <div class="timeline-item">
-                    <h3 data-key="exp2_title">Truc rayon (2025)</h3>
+                    <h3 data-key="exp2_title">Mise en rayon (2025)</h3>
                     <p>> Leclerc</p>
                 </div>
                 <div class="timeline-item">
