--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
             <section id="about-me" class="card">
                 <h2 data-key="aboutMeTitle">Qui suis-je ?</h2>
                 <p data-key="aboutMeText1">Je suis dynamique et motivée, j'aime apprendre et me dépasser. Je m'oriente petit à petit vers les systèmes et les réseaux.</p> 
-                <p data-key="aboutMeText2">L'année dernière, j'ai aimé découvrir l'informatique, créer des réseaux virtuels (sur Cisco Packet Tracer et sur la ferme des serveurs), paramétrer des serveurs, des logiciels… J'ai moins aimé le travail en groupe avec des personnes qui ne travaillaient pas beaucoup, une grosse charge de travail en début d'année et des professeurs qui nous laissent nous débrouiller sans lecon ni avec la certitude que ca marche.</p>
+                <p data-key="aboutMeText2">L'année dernière, j'ai aimé découvrir l'informatique, créer des réseaux virtuels (sur Cisco Packet Tracer et sur la ferme des serveurs), paramétrer des serveurs, des logiciels… <br>J'ai moins aimé le travail en groupe avec des personnes qui ne travaillaient pas beaucoup, une grosse charge de travail en début d'année et des professeurs qui nous laissent nous débrouiller sans lecon ni avec la certitude que ca marche.</p>
             </section>
-
+         <section id="future-goals" class="card">
+                 <h2 data-key="futureTitle">Ce que je veux faire plus tard</h2>
+                 <p data-key="futureText">J'aimerai continuer mes études en troisième année orienter système et réseaux, j'ai vu qu'intégrer le BUT RT 3° année était une très belle opportunité mais j'ai pas plus chercher. J'aimerai a terme continuer pour avoir un bac +5, rien de claire mais je compte sur mes coachs ingé + sur les formations. J'ai déjà discuter avec un Ingénieur (pas en informatique) qui m'a présenté sous un autre angle l'école d'Ingénieur..</p>
+            </section>
             <div class="grid-container">
                 <div class="card">
                     <h2 data-key="infoTitle">Informations</h2>
@@ -80,10 +83,6 @@
                 <div class="item"><h3 data-key="exp3_title">Dépannage informatique (Bénévolat)</h3><p data-key="exp3_desc">Résolution de problèmes de connectivité et configuration de PC sous Windows.</p></div>
             </section>
 
-            <section id="future-goals" class="card">
-                 <h2 data-key="futureTitle">Ce que je veux faire plus tard</h2>
-                 <p data-key="futureText">J'aimerais continuer mes études en troisième année orientée systèmes et réseaux...</p>
-            </section>
         </main>
     </div>
     
