--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button id="lang-en">EN</button>
             </div>
             
-            <img src="assets/photo.jpg" alt="Photo de Candice Vialette" class="profile-picture">
+            <img src="image/photo.jpg" alt="Photo de Candice Vialette" class="profile-picture">
             <h1 data-key="heroName">Candice Vialette</h1>
             <p class="subtitle" data-key="heroSubtitle">Étudiante en informatique</p>
             
