--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             
             <div class="button-group">
                 <a href="assets/CV_Candice_Vialette.pdf" target="_blank" class="cta-button" data-key="heroButtonCV">Télécharger mon CV</a>
-                <a href="assets/Lettre_de_Motivation.pdf" target="_blank" class="cta-button" data-key="heroButtonLM">Lettre de Motivation</a>
+                <a href="image/lettremotivation.pdf" target="_blank" class="cta-button" data-key="heroButtonLM">Lettre de Motivation</a>
             </div>
         </header>
 
