--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             
             <img src="image/photo.jpg" alt="Photo de Candice Vialette" class="profile-picture">
             <h1 data-key="heroName">Candice Vialette</h1>
-            <p class="subtitle" data-key="heroSubtitle">Étudiante en informatique</p>
+            <p class="subtitle" data-key="heroSubtitle">Étudiante en système et réseaux</p>
             
             <div class="button-group">
-                <a href="assets/CV_Candice_Vialette.pdf" target="_blank" class="cta-button" data-key="heroButtonCV">Télécharger mon CV</a>
+                <a href="image/cv.pdf" target="_blank" class="cta-button" data-key="heroButtonCV">Télécharger mon CV</a>
                 <a href="image/lettremotivation.pdf" target="_blank" class="cta-button" data-key="heroButtonLM">Lettre de Motivation</a>
             </div>
         </header>
