--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
                 <p data-key="aboutMeText2">L'année dernière, j'ai aimé découvrir l'informatique, créer des réseaux virtuels (sur Cisco Packet Tracer et sur la ferme des serveurs), paramétrer des serveurs, des logiciels… <br>J'ai moins aimé le travail en groupe avec des personnes qui ne travaillaient pas beaucoup, une grosse charge de travail en début d'année et des professeurs qui nous laissent nous débrouiller sans lecon ni avec la certitude que ca marche.</p>
             </section>
          <section id="future-goals" class="card">
+             <div class="card" id="carte-projet">
                  <h2 data-key="futureTitle">Ce que je veux faire plus tard</h2>
                  <p data-key="futureText">J'aimerai continuer mes études en troisième année orienter système et réseaux, j'ai vu qu'intégrer le BUT RT 3° année était une très belle opportunité mais j'ai pas plus chercher. J'aimerai a terme continuer pour avoir un bac +5, rien de claire mais je compte sur mes coachs ingé + sur les formations. J'ai déjà discuter avec un Ingénieur (pas en informatique) qui m'a présenté sous un autre angle l'école d'Ingénieur..</p>
             </section>
             <div class="grid-container">
-                <div class="card">
+                    <div class="card" id="carte-infos">
                     <h2 data-key="infoTitle">Informations</h2>
                     <ul class="contact-list">
                         <li><a href="https://www.linkedin.com/in/candice-v-ba28b933b/" target="_blank"><i data-feather="linkedin"></i><span data-key="linkedin">LinkedIn</span></a></li>
