--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Cette première année a aussi été riche en défis. Face à une charge de trav
                 
             </section>
             
-            section id="experience" class="card">
+            <section id="experience" class="card">
                 <h2 data-key="experienceTitle">Formations & Expériences</h2>
                 <div class="item"><h3 data-key="edu1_title">BTS SIO SISR</h3><p>Lycée Algoud Laffemas <span class="date" data-key="edu1_date">En cours</span></p></div>
                 <div class="item"><h3 data-key="edu2_title">Bac général</h3><p>Lycée Vincent d'Indy <span class="date">2021 - 2024</span></p></div>
