--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ Cette première année a aussi été riche en défis. Face à une charge de trav
                     </ul>
                 </div>
                 
-                <!-- CARTE COMPÉTENCES MODIFIÉE -->
-                <div class="card" id="skills">
+                <!-- CARTE COMPÉTENCES -->
+               <div class="card" id="skills">
                     <h2 data-key="skillsTitle">Compétences</h2>
                     <h3 data-key="softSkillsTitle">Soft Skills</h3>
                     <ul>
@@ -87,7 +87,6 @@ Cette première année a aussi été riche en défis. Face à une charge de trav
                     </ul>
                     <hr>
                     <h3 data-key="hardSkillsTitle">Hard Skills</h3>
-                    <!-- NOUVELLE GRILLE POUR LES HARD SKILLS -->
                     <div class="hard-skills-grid">
                         <div class="skill-column">
                             <h3 data-key="skillCat1">Système</h3>
@@ -109,22 +108,22 @@ Cette première année a aussi été riche en défis. Face à une charge de trav
                             <p>Pare-feu (Pfsense, ACLs)</p>
                             <p>Analyse de logs</p>
                             <p>Audit de sécurité</p>
-			<p>Nmap</p>
+                            <p>Nmap</p>
                         </div>
                         <div class="skill-column">
                             <h3 data-key="skillCat3">Codage</h3>
                             <p>Python</p>
                             <p>HTML / CSS / JavaScript</p>
-			<div class="skill-column">
-                            <h3 data-key="skillCat4">Autre</h3>
+                        </div>
+                        <div class="skill-column">
+                            <h3 data-key="skillCat5">Autre</h3>
                             <p>RGPD</p>
                             <p>Gemini</p>
-			<p>Chat GPT</p>
-			<p>Github</p>
+                            <p>Chat GPT</p>
+                            <p>Github</p>
                         </div>
                     </div>
                 </div>
-            </div>
 
             <section id="certifications" class="card">
                 <h2 data-key="certificationsTitle">Certifications</h2>
