--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@ Cette première année a aussi été riche en défis. Face à une charge de trav
                 <div class="item">
                     <h3 data-key="project1_title">Montage d’un pare‑feu</h3>
                     <p data-key="project1_desc">....</p>
-                    <a href="https://github.com/candicevialette/stormshield" target="_blank" class="project-link" data-key="project_link_text">Voir le projet sur GitHub <i data-feather="external-link"></i></a>
+                    <a href="https://github.com/candicevialette/stormshield" target="_blank" class="project-link" data-key="project_link_text">Voir le projet sur GitHub</a>
                 </div><hr>
                 <div class="item">
                     <h3 data-key="project2_title">Site internet (en cours de réalisation)</h3>
                     <p data-key="project2_desc">Le but de cette AP est de fournir au client un developpement de son entreprise en créant un site internet pour que des nouveaux client tombent dessus, bien sur a revoir cette reformulation</p>
-                    <a href="https://candicevialette.github.io/vosreves//index.html" target="_blank" class="project-link" data-key="project_link_text">Voir le site internet <i data-feather="external-link"></i></a>
+                    <a href="https://candicevialette.github.io/vosreves//index.html" target="_blank" class="project-link" data-key="project_link_text">Voir le site internet</i></a>
                 </div><hr>
                 <div class="item">
                     <h3 data-key="project3_title">Windows Server 2008 R2</h3>
@@ -152,12 +152,12 @@ Cette première année a aussi été riche en défis. Face à une charge de trav
                 <div class="item">
                     <h3 data-key="project4_title">Analyse de risques</h3>
                     <p data-key="project4_desc">Le but de ce TP est d'apprendre à réaliser une analyse des différents facteurs de riques de piratage dans une entreprise.</p>
-                    <a href="https://github.com/candicevialette/analyse-de-risques" target="_blank" class="project-link" data-key="project_link_text">Voir le projet sur GitHub <i data-feather="external-link"></i></a>
+                    <a href="https://github.com/candicevialette/analyse-de-risques" target="_blank" class="project-link" data-key="project_link_text">Voir le projet sur GitHub </a>
                 </div><hr>
                 <div class="item">
                     <h3 data-key="project5_title">Création d'un réseau entier sous Cisco Packet Tracert</h3>
                     <p data-key="project5_desc">Le but de ce tp est de nous apprendre à créer un réseau type assez complet de a à z.</p>
-                    <a href="https://github.com/candicevialette/r-seau" target="_blank" class="project-link" data-key="project_link_text">Voir le projet sur GitHub <i data-feather="external-link"></i></a>
+                    <a href="https://github.com/candicevialette/r-seau" target="_blank" class="project-link" data-key="project_link_text">Voir le projet sur GitHub </a>
                 </div>
             </section>
             
