--- a/index.html
+++ b/index.html
@@ -15,23 +15,20 @@
     <script src="js/main.js" defer></script>
 </head>
 <body>
-	<ul class="nav-links">
-    <li><a href="#about-me" data-key="nav_about">Qui suis-je</a></li>
-    <li><a href="#carte-projet" data-key="nav_future">Ce que je veux faire plus tard</a></li>
-    <li><a href="#info" data-key="nav_info">Infos</a></li>
-    <li><a href="#skills" data-key="nav_skills">Compétences</a></li>
-    <li><a href="#certifications" data-key="nav_certs">Certifications</a></li>
-    <li><a href="#projects" data-key="nav_projects">Mes projets</a></li>
-    <li><a href="#experience" data-key="nav_exp">Formations & Expériences</a></li>
-</ul>
-       <div class="page-container">
-        <header class="hero">
-            <div class="lang-switcher">
-                <button id="lang-fr" class="active">FR</button>
-                <span>/</span>
-                <button id="lang-en">EN</button>
-            </div>
-            
+	<nav class="navbar">
+        <div class="navbar-container">
+            <a href="#" class="logo">Candice Vialette</a>
+            <ul class="nav-links">
+                <li><a href="#about-me">Qui suis-je</a></li>
+                <li><a href="#carte-projet">Ce que je veux faire plus tard</a></li>
+                <li><a href="#info">Infos</a></li>
+		        <li><a href="#skills">Compétences</a></li>
+                <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#projects">Mes projets</a></li>
+                <li><a href="#experience">Formations & Expériences</a></li>
+            </ul>
+        </div>
+    </nav>
             <img src="image/photo.png" alt="Photo de Candice Vialette" class="profile-picture">
             <h1 data-key="heroName">Candice Vialette</h1>
             <p class="subtitle" data-key="heroSubtitle">Étudiante en système et réseaux</p>
