--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
     
     <script src="https://unpkg.com/feather-icons"></script>
-    <!-- La ligne appelant main.js a été supprimée car vous n'utilisez plus ce fichier -->
 </head>
 <body>
 	<nav class="navbar">
@@ -128,27 +127,27 @@ Cette première année a aussi été riche en défis. Face à une charge de trav
                 <div class="item">
                     <h3>Montage d’un pare‑feu</h3>
                     <p>Le but de cette tache en stage est de remplacer un stormshield tout en renforcant la sécurité.</p>
-                    <a href="https://github.com/candicevialette/stormshield" target="_blank" class="project-link">Voir le projet sur GitHub <i data-feather="external-link"></i></a>
+                    <a href="https://github.com/candicevialette/stormshield" target="_blank" class="project-link">Voir le projet sur GitHub</a>
                 </div><hr>
                 <div class="item">
                     <h3>Site internet (en cours de réalisation)</h3>
                     <p>Le but de cette AP est de fournir au client un developpement de son entreprise en créant un site internet pour que des nouveaux client tombent dessus, bien sur a revoir cette reformulation.</p>
-                    <a href="https://candicevialette.github.io/vosreves//index.html" target="_blank" class="project-link">Voir le site internet <i data-feather="external-link"></i></a>
+                    <a href="https://candicevialette.github.io/vosreves//index.html" target="_blank" class="project-link">Voir le site internet</a>
                 </div><hr>
                 <div class="item">
                     <h3>Windows Server 2008 R2</h3>
                     <p>Le but de ce TP était de découvrir comment parametrer un serveur et ses fonctionnalitées de base. C'est sur un serveur de 2008 car ca suffisait a ma professeur pour l'utilisation qu'on allait faire.</p>
-                    <a href="https://github.com/candicevialette/serveurR2008" target="_blank" class="project-link">Voir le projet sur GitHub <i data-feather="external-link"></i></a>
+                    <a href="https://github.com/candicevialette/serveurR2008" target="_blank" class="project-link">Voir le projet sur GitHub</a>
                 </div><hr>
                 <div class="item">
                     <h3>Analyse de risques</h3>
                     <p>Le but de ce TP est d'apprendre à réaliser une analyse des différents facteurs de riques de piratage dans une entreprise.</p>
-                    <a href="https://github.com/candicevialette/analyse-de-risques" target="_blank" class="project-link">Voir le projet sur GitHub <i data-feather="external-link"></i></a>
+                    <a href="https://github.com/candicevialette/analyse-de-risques" target="_blank" class="project-link">Voir le projet sur GitHub</a>
                 </div><hr>
                 <div class="item">
                     <h3>Création d'un réseau entier sous Cisco Packet Tracert</h3>
                     <p>Le but de ce tp est de nous apprendre à créer un réseau type assez complet de a à z.</p>
-                    <a href="https://github.com/candicevialette/r-seau" target="_blank" class="project-link">Voir le projet sur GitHub <i data-feather="external-link"></i></a>
+                    <a href="https://github.com/candicevialette/r-seau" target="_blank" class="project-link">Voir le projet sur GitHub</a>
                 </div>
             </section>
             
