--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <ul class="nav-links">
                 <li><a href="#about-me">Qui suis-je</a></li>
                 <li><a href="#carte-projet">Ce que je veux faire plus tard</a></li>
+				<li><a href="#objectif">Objectif</a></li>
                 <li><a href="#info">Infos</a></li>
 		        <li><a href="#skills">Compétences</a></li>
                 <li><a href="#certifications">Certifications</a></li>
@@ -29,10 +30,8 @@
         </div>
     </nav>
 
-    <!-- LE CONTENEUR PRINCIPAL A ÉTÉ RESTAURÉ ICI -->
-    <div class="page-container">
-        <!-- LA STRUCTURE DU HÉRO A ÉTÉ CORRIGÉE -->
-        <header class="hero">
+      <div class="page-container">
+            <header class="hero">
             <img src="image/photo.png" alt="Photo de Candice Vialette" class="profile-picture">
             <h1 data-key="heroName">Candice Vialette</h1>
             <p class="subtitle" data-key="heroSubtitle">Étudiante en système et réseaux</p>
@@ -47,8 +46,8 @@
             <section id="about-me" class="card">
                 <h2>Qui suis-je ?</h2>
                 <p>Je suis une étudiante curieuse et déterminée, et ma première année en BTS SIO a confirmé ma passion naissante pour les systèmes et les réseaux.<br>
-J'ai particulièrement apprécié les aspects pratiques de la formation : concevoir des architectures sur Cisco Packet Tracer, déployer des services sur des serveurs et donner vie à une infrastructure. C'est en pratiquant et faisant des erreurs que j'apprends le plus.<br>
-Cette première année a aussi été riche en défis. Face à une charge de travail importante ou à des projets où il fallait être totalement autonome, j'ai appris à m'organiser, à chercher les solutions par moi-même et à faire pour deux le travail. Ces situations, bien que parfois difficiles, m'ont surtout rendue plus efficace et plus débrouillarde.</p>
+				J'ai particulièrement apprécié les aspects pratiques de la formation : concevoir des architectures sur Cisco Packet Tracer, déployer des services sur des serveurs et donner vie à une infrastructure. C'est en pratiquant et faisant des erreurs que j'apprends le plus.<br>
+				Cette première année a aussi été riche en défis. Face à une charge de travail importante ou à des projets où il fallait être totalement autonome, j'ai appris à m'organiser, à chercher les solutions par moi-même et à faire pour deux le travail. Ces situations, bien que parfois difficiles, m'ont surtout rendue plus efficace et plus débrouillarde.</p>
             </section>
             
             <section class="card" id="carte-projet">
@@ -56,6 +55,15 @@ Cette première année a aussi été riche en défis. Face à une charge de trav
                  <p>J'aimerai continuer mes études en troisième année orienter système et réseaux, j'ai vu qu'intégrer le BUT RT 3° année était une très belle opportunité mais j'ai pas plus chercher. À plus long terme, je vise un diplôme de niveau Bac+5. Mon projet est encore en construction, mais je suis convaincue de vouloir évoluer vers des postes à plus haute technicité ou à responsabilités. Je m'informe grace à aux missions et aux personnes d'Ingé +.</p>
             </section>
 
+		<section class="card" id="objectif">
+                <h2>Mes Objectifs à Court Terme</h2>
+                <div class="item">
+                    <h3>Poursuite d'études en alternance (Bac+3)</h3>
+                    <p>Mon objectif principal est d'intégrer une troisième année d'études en alternance, idéalement en BUT Réseaux et Télécommunications (RT) ou en Licence Professionnelle. Je suis convaincue que l'alternance est le meilleur moyen d'approfondir mes compétences techniques tout en évoluant vers des missions plus complexes et à plus grande responsabilité.
+                    <br>Forte de mon expérience de stage, je souhaite particulièrement trouver une opportunité d'alternance chez Mégao afin de continuer à m'y investir et à y développer mes compétences. <br>A terme j'aimerai pousser mes études le plus loin possible.</p>
+                </div>
+            </section>
+			
             <section class="card" id="info">
                 <h2>Informations</h2>
                 <ul class="contact-list">
