--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h2>Qui suis-je ?</h2>
                 <p>Je suis une étudiante curieuse et déterminée, et ma première année en BTS SIO a confirmé ma passion naissante pour les systèmes et les réseaux.<br><br>
 				J'ai particulièrement apprécié les aspects pratiques de la formation : concevoir des architectures sur Cisco Packet Tracer, déployer des services sur des serveurs et donner vie à une infrastructure. C'est en pratiquant et faisant des erreurs que j'apprends le plus.<br><br>
-				Cette première année a aussi été riche en défis. Face à une charge de travail importante ou à des projets où il fallait être totalement autonome, j'ai appris à m'organiser, à chercher les solutions par moi-même et à faire pour deux le travail. Ces situations, bien que parfois difficiles, m'ont surtout rendue plus efficace et plus débrouillarde.</p>
+				Cette première année a aussi été riche en défis. Face à une charge de travail importante ou à des projets où il fallait être totalement autonome, j'ai appris à m'organiser, à chercher les solutions par moi-même et à faire pour deux le travail. <br><br>Ces situations, bien que parfois difficiles, m'ont surtout rendue plus efficace et plus débrouillarde.</p>
             </section>
             
             <section class="card" id="carte-projet">
