--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                 <div class="item"><h3>Bac général</h3><p>Lycée Vincent d'Indy <span class="date">2021 - 2024</span></p></div>
                 <hr>
                 <div class="item"><h3>Mégao (Stage) - 2025</h3><p>Découvrir le métier de technicien IT en participant aux missions quotidiennes de l'équipe. Mettre en application mes connaissances en systèmes et réseaux.</p></div>
-                <div class="item"><h3>GAEC de la chataigneraie (Saisonnier) (2021-2024)</h3><p>Un travail saisonnier qui demande beaucoup de rigueur, de patience et de concentration.</p></div>
-                <div class="item"><h3>Dépannage informatique (Bénévolat)</h3><p>Une première expérience pratique où j'ai appris à diagnostiquer et à résoudre les problèmes de connectivité et les pannes logicielles sur des ordinateurs Windows.</p></div>
+                <div class="item"><h3>GAEC de la chataigneraie (Saisonnier) - 2021-2024</h3><p>Un travail saisonnier qui demande beaucoup de rigueur, de patience et de concentration.</p></div>
+                <div class="item"><h3>Dépannage informatique (Bénévolat) 2018 - aujourd'hui</h3><p>Une première expérience pratique où j'ai appris à diagnostiquer et à résoudre les problèmes de connectivité et les pannes logicielles sur des ordinateurs Windows.</p></div>
             </section>
 
         </main>
