--- a/index.html
+++ b/index.html
@@ -52,17 +52,19 @@
             
             <section class="card" id="carte-projet">
                  <h2>Ce que je veux faire plus tard</h2>
-                 <p>Mon ambition à long terme est d'obtenir un diplôme de niveau Bac+5, voire de pousser mes études encore plus loin, pour évoluer vers des postes à haute technicité et à responsabilités comme celui d'Administratrice Systèmes ou d'Administratrice Réseaux. Je suis particulièrement attirée par la conception d'architectures réseau. 
-				<br><br> Une expérience à l'étranger fait également partie de mon projet pour de découvrir de nouvelles méthodes de travail et d'enrichir mon parcours.
-			</p>
+                 <p>J'aspire à un parcours de formation jusqu'au niveau Bac+5 pour accéder à des postes à responsabilités en tant qu'Administratrice Systèmes ou Réseaux. Ce qui me motive particulièrement est la possibilité de concevoir et de diriger des projets d'infrastructure concrets en maîtrisant en les maitrisant en totalité.
+				<br><br>En parallèle, je souhaite enrichir mon parcours par une expérience d'un ou deux ans à l'étranger. Je suis convaincue que découvrir de nouvelles approches techniques et culturelles est un atout indispensable pour développer une vision globale et une grande capacité d'adaptation.
+				</p>
             </section>
 
 		<section class="card" id="objectif">
                 <h2>Mes Objectifs</h2>
                 <div class="item">
                     <h3>Poursuite d'études en alternance (Bac+3)</h3>
-                    <p>Mon objectif principal est d'intégrer une troisième année d'études en alternance, idéalement en BUT Réseaux et Télécommunications (RT) ou en Licence Professionnelle. Je suis convaincue que l'alternance est le meilleur moyen d'approfondir mes compétences techniques tout en évoluant vers des missions plus complexes et à plus grande responsabilité.
-                    <br><br>Forte de mon expérience de stage, je souhaite particulièrement trouver une opportunité d'alternance chez Mégao afin de continuer à m'y investir et à y développer mes compétences. <br><br>A terme j'aimerai pousser mes études le plus loin possible.</p>
+                    <p>Mon objectif principal est d'intégrer une troisième année de BUT Réseaux et Télécommunications en alternance. Je veux aborder des missions plus techniques et avoir plus de responsabilités. 
+					<br><br>Pour cela, je dois d'abord valider mon BTS SIO cette année, en me concentrant sur les projets finaux pour avoir une base solide. 
+					<br><br>Mon stage chez Mégao ayant été une très bonne expérience, je chercherai en priorité à les rejoindre pour cette alternance.
+					</p>
                 </div>
             </section>
 			
@@ -163,12 +165,32 @@
             
            <section id="experience" class="card">
                 <h2>Formations & Expériences</h2>
-                <div class="item"><h3>BTS SIO SISR</h3><p>Lycée Algoud Laffemas <span class="date">En cours</span></p></div>
-                <div class="item"><h3>Bac général</h3><p>Lycée Vincent d'Indy <span class="date">2021 - 2024</span></p></div>
+                <div class="item">
+                    <span class="date">En cours</span>
+                    <h3>BTS SIO SISR</h3>
+                    <p>Lycée Algoud Laffemas</p>
+                </div>
+                <div class="item">
+                    <span class="date">2021 - 2024</span>
+                    <h3>Bac général</h3>
+                    <p>Lycée Vincent d'Indy</p>
+                </div>
                 <hr>
-                <div class="item"><h3>Mégao (Stage)<span class="date">2025</span></h3><p>Découvrir le métier de technicien IT en participant aux missions quotidiennes de l'équipe. Mettre en application mes connaissances en systèmes et réseaux.</p></div>
-                <div class="item"><h3>GAEC de la chataigneraie (Saisonnier) - 2021-2024<span class="date">2021-2024</span></h3><p>Un travail saisonnier qui demande beaucoup de rigueur, de patience et de concentration.</p></div>
-                <div class="item"><h3>Dépannage informatique (Bénévolat) 2018 - aujourd'hui</h3><p>Une première expérience pratique où j'ai appris à diagnostiquer et à résoudre les problèmes de connectivité et les pannes logicielles sur des ordinateurs Windows.</p></div>
+                <div class="item">
+                    <span class="date">2025</span>
+                    <h3>Mégao (Stage)</h3>
+                    <p>Découvrir le métier de technicien IT en participant aux missions quotidiennes de l'équipe. Mettre en application mes connaissances en systèmes et réseaux.</p>
+                </div>
+                <div class="item">
+                    <span class="date">2021 - 2024</span>
+                    <h3>GAEC de la chataigneraie (Saisonnier)</h3>
+                    <p>Un travail saisonnier qui demande beaucoup de rigueur, de patience et de concentration.</p>
+                </div>
+                <div class="item">
+                    <span class="date">2018 - aujourd'hui</span>
+                    <h3>Dépannage informatique (Bénévolat)</h3>
+                    <p>Une première expérience pratique où j'ai appris à diagnostiquer et à résoudre les problèmes de connectivité et les pannes logicielles sur des ordinateurs Windows.</p>
+                </div>
             </section>
 
         </main>
