--- a/index.html
+++ b/index.html
@@ -206,9 +206,8 @@
     <footer>
     </footer>
     
-    <!-- Scripts -->
-    <script src="js/translations.js"></script>
-    <script src="js/app.js"></script>
+    <script src="main/translations.js"></script>
+    <script src="main/app.js"></script>
     <script>
       feather.replace()
     </script>
