--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="nav-links">
                 <li><a href="#about-me" data-key="navAbout">Qui suis-je</a></li>
                 <li><a href="#carte-projet" data-key="navFuture">Ce que je veux faire plus tard</a></li>
-				<li><a href="#objectif" data-key="navObjective">Objectif</a></li>
+				<li><a href="#objectif" data-key="navObjective">Objectifs</a></li>
                 <li><a href="#info" data-key="navInfo">Infos</a></li>
 		        <li><a href="#skills" data-key="navSkills">Compétences</a></li>
                 <li><a href="#certifications" data-key="navCerts">Certifications</a></li>
